Добавляет иконки в особенности

--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
             <div class="container">
                 <h2 class="hang-captoin visually-hidden">Особенности</h2>
                 <ul class="hang-list list">
-                <li class="main-hang-list">
+                <li class="main-hang-list icon-antena">
                     <h3 class="list-items">Внимание к деталям</h3>
                     <p class="items-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li class="main-hang-list">
+                <li class="main-hang-list icon-clock">
                     <h3 class="list-items">Пунктуальность</h3>
                     <p class="items-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li class="main-hang-list">
+                <li class="main-hang-list icon-diagram">
                     <h3 class="list-items">Планирование</h3>
                     <p class="items-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li class="main-hang-list">
+                <li class="main-hang-list icon-space">
                     <h3 class="list-items">Современные технологии</h3>
                     <p class="items-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
