--- a/portfolio.html
+++ b/portfolio.html
@@ -21,16 +21,40 @@
             <!-- Навигация -->
             <nav class="nav">
                 <ul class="nav-list list">
-                    <li class="list-link"><a href="./index.html" class="nav-link link">Студия</a></li>
-                    <li class="list-link"><a href="./portfolio.html" class="nav-link link current">Портфолио</a></li>
-                    <li class="list-link"><a href="" class="nav-link link">Контакты</a></li>
+                    <li class="list-link">
+                        <a href="./index.html" class="nav-link link">Студия</a>
+                    </li>
+                    <li class="list-link">
+                        <a href="./portfolio.html" class="nav-link link current">Портфолио</a>
+                    </li>
+                    <li class="list-link">
+                        <a href="" class="nav-link link">Контакты</a>
+                    </li>
                 </ul>
             </nav>
             <!-- Контакты -->
-            <ul class="nav-contact list">
-                <li><a href="mailto:info@devstudio.com" class="contact-link link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="contact-link link">+38 096 111 11 11</a></li>
-            </ul>
+                <ul class="nav-contact list">
+                    <li>
+                        <a href="mailto:info@devstudio.com" class="contact-link link">
+                            <div class="contact-icon-block">
+                                <svg class="mail-icon">
+                                    <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                                </svg>
+                                info@devstudio.com
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="tel:+380961111111" class="contact-link link">
+                            <div class="contact-icon-block">
+                                <svg class="phone-icon">
+                                    <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                                </svg>
+                                +38 096 111 11 11
+                            </div>
+                        </a>
+                    </li>
+                </ul>
         </div>
     </div>
 </header>
@@ -128,19 +152,19 @@
     <footer class="footer">
         <div class="container">
         <a href="./index.html" class="icon-second link"><span class="icon">Web</span>Studio</a>
-        <address class="address-block">
-        <ul class="address-list list">
-            <li class="footer-list">
-                <a href="https://goo.gl/maps/MMKUuwx7VS9g7BKy7" class="address-map link">г. Киев, пр-т Леси Украинки, 26</a>
-            </li>
-            <li class="footer-list">
-                <a href="mailto:info@devstudio.com" class="address-item link">info@devstudio.com</a>
-            </li>
-            <li class="footer-list">
-                <a href="tel:+380961111111" class="address-item link">+38 096 111 11 11</a>
-            </li>
-        </ul>
-        </address>
+            <address class="address-block">
+                <ul class="address-list list">
+                    <li class="footer-list">
+                        <a href="https://goo.gl/maps/MMKUuwx7VS9g7BKy7" class="address-map link">г. Киев, пр-т Леси Украинки, 26</a>
+                    </li>
+                    <li class="footer-list">
+                        <a href="mailto:info@devstudio.com" class="address-item link">info@devstudio.com</a>
+                    </li>
+                    <li class="footer-list">
+                        <a href="tel:+380961111111" class="address-item link">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
         </div>
     </footer>
 </body>
