--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li>
                         <a href="mailto:info@devstudio.com" class="contact-link link">
                             <div class="contact-icon-block">
-                                <svg class="mail-icon">
+                                <svg class="mail-icon" width="16px" height="12px">
                                     <use href="./images/symbol-defs.svg#icon-envelope"></use>
                                 </svg>
                                 info@devstudio.com
@@ -41,7 +41,7 @@
                     <li>
                         <a href="tel:+380961111111" class="contact-link link">
                             <div class="contact-icon-block">
-                                <svg class="phone-icon">
+                                <svg class="phone-icon" width="10px" height="16px">
                                     <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                                 </svg>
                                 +38 096 111 11 11
@@ -137,28 +137,28 @@
                                 <ul class="social-list">
                                     <li>
                                         <a href="" class="social-elements">
-                                            <svg class="social-icon">
+                                            <svg width="20px" height="20px">
                                                 <use href="./images/symbol-defs.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li>
                                         <a href="" class="social-elements">
-                                            <svg class="social-icon">
+                                            <svg width="20px" height="20px">
                                                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li>
                                         <a href="" class="social-elements">
-                                            <svg class="social-icon">
+                                            <svg width="20px" height="20px">
                                                 <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li>
                                         <a href="" class="social-elements">
-                                            <svg class="social-icon">
+                                            <svg width="20px" height="20px">
                                                 <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                                             </svg>
                                         </a>
@@ -174,28 +174,28 @@
                         <ul class="social-list">
                             <li>
                                 <a href="" class="social-elements">
-                                    <svg class="social-icon">
+                                    <svg width="20px" height="20px">
                                         <use href="./images/symbol-defs.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a href="" class="social-elements">
-                                    <svg class="social-icon">
+                                    <svg width="20px" height="20px">
                                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a href="" class="social-elements">
-                                    <svg class="social-icon">
+                                    <svg width="20px" height="20px">
                                         <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a href="" class="social-elements">
-                                    <svg class="social-icon">
+                                    <svg width="20px" height="20px">
                                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -211,28 +211,28 @@
                             <ul class="social-list">
                                 <li>
                                     <a href="" class="social-elements">
-                                        <svg class="social-icon">
+                                        <svg width="20px" height="20px">
                                             <use href="./images/symbol-defs.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="" class="social-elements">
-                                        <svg class="social-icon">
+                                        <svg width="20px" height="20px">
                                             <use href="./images/symbol-defs.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="" class="social-elements">
-                                        <svg class="social-icon">
+                                        <svg width="20px" height="20px">
                                             <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="" class="social-elements">
-                                        <svg class="social-icon">
+                                        <svg width="20px" height="20px">
                                             <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -248,28 +248,28 @@
                             <ul class="social-list">
                                 <li>
                                     <a href="" class="social-elements">
-                                        <svg class="social-icon">
+                                        <svg width="20px" height="20px">
                                             <use href="./images/symbol-defs.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="" class="social-elements">
-                                        <svg class="social-icon">
+                                        <svg width="20px" height="20px">
                                             <use href="./images/symbol-defs.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="" class="social-elements">
-                                        <svg class="social-icon">
+                                        <svg width="20px" height="20px">
                                             <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="" class="social-elements">
-                                        <svg class="social-icon">
+                                        <svg width="20px" height="20px">
                                             <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -305,13 +305,13 @@
                             </svg>
                         </a>
                     </li>
-                    <li class="clients">
-                        <a class="client-items">
-                            <svg class="client-icon" width="106px" height="60px">
-                                <use href="./images/symbol-defs.svgicon-#icon-group-4"></use>
-                            </svg>
-                        </a>
-                    </li>
+                <li class="clients">
+                    <a class="client-items">
+                        <svg class="client-icon" width="106px" height="60px">
+                            <use href="./images/symbol-defs.svg#icon-group-4"></use>
+                        </svg>
+                    </a>
+                </li>
                     <li class="clients">
                         <a class="client-items">
                             <svg class="client-icon" width="106px" height="60px">
@@ -333,6 +333,7 @@
     <!-- Подвал -->
     <footer class="footer">
         <div class="container">
+            <div class="footer-adrees-block">
             <a href="./index.html" class="icon-second link"><span class="icon">Web</span>Studio</a>
                 <address class="address-block">
                     <ul class="address-list list">
@@ -347,6 +348,40 @@
                         </li>
                     </ul>
                 </address>
+            </div>
+                <div class="footer-social">
+                    <b class="social-main">присоединяйтесь</b>
+                    <ul class="social-list">
+                        <li>
+                            <a href="" class="social-elements">
+                                <svg width="20px" height="20px">
+                                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="social-elements">
+                                <svg width="20px" height="20px">
+                                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="social-elements">
+                                <svg width="20px" height="20px">
+                                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="social-elements">
+                                <svg width="20px" height="20px">
+                                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
         </div>
     </footer>
 </body>
