--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
     </main>
     <!-- Подвал -->
     <footer class="footer">
-        <div class="container">
+        <div class="container container-list">
             <div class="footer-adrees-block">
             <a href="./index.html" class="icon-second link"><span class="icon">Web</span>Studio</a>
                 <address class="address-block">
@@ -351,30 +351,30 @@
             </div>
                 <div class="footer-social">
                     <b class="social-main">присоединяйтесь</b>
-                    <ul class="social-list">
+                    <ul class="social-list-footer">
                         <li>
-                            <a href="" class="social-elements">
+                            <a href="" class="social-footer">
                                 <svg width="20px" height="20px">
                                     <use href="./images/symbol-defs.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
-                            <a href="" class="social-elements">
+                            <a href="" class="social-footer">
                                 <svg width="20px" height="20px">
                                     <use href="./images/symbol-defs.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
-                            <a href="" class="social-elements">
+                            <a href="" class="social-footer">
                                 <svg width="20px" height="20px">
                                     <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
-                            <a href="" class="social-elements">
+                            <a href="" class="social-footer">
                                 <svg width="20px" height="20px">
                                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                                 </svg>
