--- a/portfolio.html
+++ b/portfolio.html
@@ -21,40 +21,34 @@
             <!-- Навигация -->
             <nav class="nav">
                 <ul class="nav-list list">
-                    <li class="list-link">
-                        <a href="./index.html" class="nav-link link">Студия</a>
-                    </li>
-                    <li class="list-link">
-                        <a href="./portfolio.html" class="nav-link link current">Портфолио</a>
-                    </li>
-                    <li class="list-link">
-                        <a href="" class="nav-link link">Контакты</a>
-                    </li>
+                    <li class="list-link"><a href="./index.html" class="nav-link link">Студия</a></li>
+                    <li class="list-link"><a href="./portfolio.html" class="nav-link link current">Портфолио</a></li>
+                    <li class="list-link"><a href="" class="nav-link link">Контакты</a></li>
                 </ul>
             </nav>
             <!-- Контакты -->
-                <ul class="nav-contact list">
-                    <li>
-                        <a href="mailto:info@devstudio.com" class="contact-link link">
-                            <div class="contact-icon-block">
-                                <svg class="mail-icon">
-                                    <use href="./images/symbol-defs.svg#icon-envelope"></use>
-                                </svg>
-                                info@devstudio.com
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="tel:+380961111111" class="contact-link link">
-                            <div class="contact-icon-block">
-                                <svg class="phone-icon">
-                                    <use href="./images/symbol-defs.svg#icon-smartphone"></use>
-                                </svg>
-                                +38 096 111 11 11
-                            </div>
-                        </a>
-                    </li>
-                </ul>
+            <ul class="nav-contact list">
+                <li>
+                    <a href="mailto:info@devstudio.com" class="contact-link link">
+                        <div class="contact-icon-block">
+                            <svg class="mail-icon" width="16px" height="12px">
+                                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                            </svg>
+                            info@devstudio.com
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="tel:+380961111111" class="contact-link link">
+                        <div class="contact-icon-block">
+                            <svg class="phone-icon" width="10px" height="16px">
+                                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                            </svg>
+                            +38 096 111 11 11
+                        </div>
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
 </header>
@@ -82,67 +76,85 @@
         </ul>
             <ul class="list-services list">
                 <li class="services">
+                    <a href="" class="filter-link">
                     <img src="./images/img5.jpg" alt="Ноутбук с сайтом" width="370">
                     <div class="services-block">
                     <h2 class="services-title">Технокряк</h2>
                     <p class="services-text">Веб-сайт</p>
                     </div>
+                    </a>
                 </li>
                 <li class="services">
+                    <a href="" class="filter-link">
                     <img src="./images/img6.jpg" alt="Баскетбольный постер" width="370">
                     <div class="services-block">
                     <h2 class="services-title">Постер New Orlean vs Golden Star</h2>
                     <p class="services-text">Дизайн</p>
                     </div>
+                    </a>
                 </li>
                 <li class="services">
+                    <a href="" class="filter-link">
                     <img src="./images/img7.jpg" alt="Рыба логотип ресторана" width="370">
                     <div class="services-block">
                     <h2 class="services-title">Ресторан Seafood</h2>
                     <p class="services-text">Приложение</p>
                     </div>
+                    </a>
                 </li>
                 <li class="services">
+                    <a href="" class="filter-link">
                     <img src="./images/img8.jpg" alt="Наушники" width="370">
                     <div class="services-block">
                     <h2 class="services-title">Проект Prime</h2>
                     <p class="services-text">Маркетинг</p>
                     </div>
+                    </a>
                 </li>
                 <li class="services">
+                    <a href="" class="filter-link">
                     <img src="./images/img9.jpg" alt="Две коробки" width="370">
                     <div class="services-block">
                     <h2 class="services-title">Проект Boxes</h2>
-                    <p> class="services-text"Приложение</p>
+                    <p class="services-text">Приложение</p>
                     </div>
+                    </a>
                 </li>
                 <li class="services">
+                    <a href="" class="filter-link">
                     <img src="./images/img10.jpg" alt="Мак" width="370">
                     <div class="services-block">
                     <h2 class="services-title">Inspiration has no Borders</h2>
                     <p class="services-text">Веб-сайт</p>
                     </div>
+                    </a>
                 </li>
                 <li class="services">
+                    <a href="" class="filter-link">
                     <img src="./images/img11.jpg" alt="Книга" width="370">
                     <div class="services-block">
                     <h2 class="services-title">Издание Limited Edition</h2>
                     <p class="services-text">Дизайн</p>
                     </div>
+                    </a>
                 </li>
                 <li class="services">
+                    <a href="" class="filter-link">
                     <img src="./images/img12.jpg" alt="Бирка" width="370">
                     <div class="services-block">
                     <h2 class="services-title">Проект LAB</h2>
                     <p class="services-text">Маркетинг</p>
                     </div>
+                    </a>
                 </li>
                 <li class="services">
+                    <a href="" class="filter-link">
                     <img src="./images/img13.jpg" alt="Ноутбук с сайтом" width="370">
                     <div class="services-block">
                     <h2 class="services-title">Growing Business</h2>
                     <p class="services-text">Приложение</p>
                     </div>
+                    </a>
                 </li>
             </ul>
             </div>
@@ -150,21 +162,57 @@
     </main>
     <!-- Подвал -->
     <footer class="footer">
-        <div class="container">
-        <a href="./index.html" class="icon-second link"><span class="icon">Web</span>Studio</a>
-            <address class="address-block">
-                <ul class="address-list list">
-                    <li class="footer-list">
-                        <a href="https://goo.gl/maps/MMKUuwx7VS9g7BKy7" class="address-map link">г. Киев, пр-т Леси Украинки, 26</a>
+        <div class="container container-list">
+            <div class="footer-adrees-block">
+                <a href="./index.html" class="icon-second link"><span class="icon">Web</span>Studio</a>
+                <address class="address-block">
+                    <ul class="address-list list">
+                        <li class="footer-list">
+                            <a href="https://goo.gl/maps/MMKUuwx7VS9g7BKy7" class="address-map link">г. Киев, пр-т Леси
+                                Украинки, 26</a>
+                        </li>
+                        <li class="footer-list">
+                            <a href="mailto:info@devstudio.com" class="address-item link">info@devstudio.com</a>
+                        </li>
+                        <li class="footer-list">
+                            <a href="tel:+380961111111" class="address-item link">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-social">
+                <b class="social-main">присоединяйтесь</b>
+                <ul class="social-list-footer">
+                    <li>
+                        <a href="" class="social-footer">
+                            <svg width="20px" height="20px">
+                                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="footer-list">
-                        <a href="mailto:info@devstudio.com" class="address-item link">info@devstudio.com</a>
+                    <li>
+                        <a href="" class="social-footer">
+                            <svg width="20px" height="20px">
+                                <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="footer-list">
-                        <a href="tel:+380961111111" class="address-item link">+38 096 111 11 11</a>
+                    <li>
+                        <a href="" class="social-footer">
+                            <svg width="20px" height="20px">
+                                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="social-footer">
+                            <svg width="20px" height="20px">
+                                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
