фикс иконок футера

--- a/index.html
+++ b/index.html
@@ -352,28 +352,28 @@
                 <div class="footer-social">
                     <b class="social-main">присоединяйтесь</b>
                     <ul class="social-list-footer">
-                        <li>
+                        <li class="item-list-footer">
                             <a href="" class="social-footer">
                                 <svg width="20px" height="20px">
                                     <use href="./images/symbol-defs.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li>
+                        <li class="item-list-footer">
                             <a href="" class="social-footer">
                                 <svg width="20px" height="20px">
                                     <use href="./images/symbol-defs.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li>
+                        <li class="item-list-footer">
                             <a href="" class="social-footer">
                                 <svg width="20px" height="20px">
                                     <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li>
+                        <li class="item-list-footer">
                             <a href="" class="social-footer">
                                 <svg width="20px" height="20px">
                                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
