Убирает косяки после ментора

--- a/index.html
+++ b/index.html
@@ -135,28 +135,28 @@
                                 <h3 class="team-worker title-h3">Игорь Демьяненко</h3>
                                 <p class="worker-position">Product Designer</p>
                                 <ul class="social-list">
-                                    <li>
+                                    <li class="social-list-elements">
                                         <a href="" class="social-elements">
                                             <svg width="20px" height="20px">
                                                 <use href="./images/symbol-defs.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="social-list-elements">
                                         <a href="" class="social-elements">
                                             <svg width="20px" height="20px">
                                                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="social-list-elements">
                                         <a href="" class="social-elements">
                                             <svg width="20px" height="20px">
                                                 <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="social-list-elements">
                                         <a href="" class="social-elements">
                                             <svg width="20px" height="20px">
                                                 <use href="./images/symbol-defs.svg#icon-linkedin"></use>
@@ -172,28 +172,28 @@
                         <h3 class="team-worker title-h3">Ольга Репина</h3>
                         <p class="worker-position">Frontend Developer</p>
                         <ul class="social-list">
-                            <li>
+                            <li class="social-list-elements">
                                 <a href="" class="social-elements">
                                     <svg width="20px" height="20px">
                                         <use href="./images/symbol-defs.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li>
+                            <li class="social-list-elements">
                                 <a href="" class="social-elements">
                                     <svg width="20px" height="20px">
                                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li>
+                            <li class="social-list-elements">
                                 <a href="" class="social-elements">
                                     <svg width="20px" height="20px">
                                         <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li>
+                            <li class="social-list-elements">
                                 <a href="" class="social-elements">
                                     <svg width="20px" height="20px">
                                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
@@ -209,28 +209,28 @@
                             <h3 class="team-worker title-h3">Николай Тарасов</h3>
                             <p class="worker-position">Marketing</p>
                             <ul class="social-list">
-                                <li>
+                                <li class="social-list-elements">
                                     <a href="" class="social-elements">
                                         <svg width="20px" height="20px">
                                             <use href="./images/symbol-defs.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="social-list-elements">
                                     <a href="" class="social-elements">
                                         <svg width="20px" height="20px">
                                             <use href="./images/symbol-defs.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="social-list-elements">
                                     <a href="" class="social-elements">
                                         <svg width="20px" height="20px">
                                             <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="social-list-elements">
                                     <a href="" class="social-elements">
                                         <svg width="20px" height="20px">
                                             <use href="./images/symbol-defs.svg#icon-linkedin"></use>
@@ -246,28 +246,28 @@
                             <h3 class="team-worker title-h3">Михаил Ермаков</h3>
                             <p class="worker-position">UI Designer</p>
                             <ul class="social-list">
-                                <li>
+                                <li class="social-list-elements">
                                     <a href="" class="social-elements">
                                         <svg width="20px" height="20px">
                                             <use href="./images/symbol-defs.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="social-list-elements">
                                     <a href="" class="social-elements">
                                         <svg width="20px" height="20px">
                                             <use href="./images/symbol-defs.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="social-list-elements">
                                     <a href="" class="social-elements">
                                         <svg width="20px" height="20px">
                                             <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="social-list-elements">
                                     <a href="" class="social-elements">
                                         <svg width="20px" height="20px">
                                             <use href="./images/symbol-defs.svg#icon-linkedin"></use>
@@ -285,43 +285,43 @@
                 <h2 class="client-header">Постоянные клиенты</h2>
                 <ul class="client-list">
                     <li class="clients">
-                        <a class="client-items">
-                            <svg class="client-icon" width="106px" height="60px">
+                        <a href="" class="client-items">
+                            <svg width="106px" height="60px">
                                 <use href="./images/symbol-defs.svg#icon-group-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients">
-                        <a class="client-items">
-                            <svg class="client-icon" width="106px" height="60px">
+                        <a href="" class="client-items">
+                            <svg width="106px" height="60px">
                                 <use href="./images/symbol-defs.svg#icon-group-2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients">
-                        <a class="client-items">
-                            <svg class="client-icon" width="106px" height="60px">
+                        <a href="" class="client-items">
+                            <svg width="106px" height="60px">
                                 <use href="./images/symbol-defs.svg#icon-group-3"></use>
                             </svg>
                         </a>
                     </li>
                 <li class="clients">
-                    <a class="client-items">
-                        <svg class="client-icon" width="106px" height="60px">
+                    <a href="" class="client-items">
+                        <svg width="106px" height="60px">
                             <use href="./images/symbol-defs.svg#icon-group-4"></use>
                         </svg>
                     </a>
                 </li>
                     <li class="clients">
-                        <a class="client-items">
-                            <svg class="client-icon" width="106px" height="60px">
+                        <a href="" class="client-items">
+                            <svg width="106px" height="60px">
                                 <use href="./images/symbol-defs.svg#icon-group-5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients">
-                        <a class="client-items">
-                            <svg class="client-icon" width="106px" height="60px">
+                        <a href="" class="client-items">
+                            <svg width="106px" height="60px">
                                 <use href="./images/symbol-defs.svg#icon-group-6"></use>
                             </svg>
                         </a>
